# AIx

./: .gitignore  CMakeLists.txt  README.md
include/: activations.hpp  cell.hpp  cnn.hpp  commons.hpp  concepts.hpp  constants.hpp  convolution.hpp  crossentropylayer.hpp  custom_exceptions.hpp  ffnn.hpp  ffnn_newton.hpp  ffnn_rsprop.hpp  ffnnbuilder.hpp  inetwork.hpp  layer.hpp  loss.hpp  pooling.hpp  preprocessing.hpp  scheduler.hpp  softmax.hpp  utils.hpp
include/cnn/: cnn.hpp  convolution.hpp  pooling.hpp
include/concurrency/: scheduler.hpp  threadsafequeue.hpp
include/dal/: idal.hpp
include/data/: axis.hpp  csvreader.h  frame.hpp  frame.tcc  heterogeneouscontainter.hpp  heterogeneousvector.hpp  series.hpp  series.tcc  series_iterator.hpp  seriescrawler.hpp  seriescrawler.tcc
include/mlp/: cell.hpp  commons.hpp  ffnn.hpp  ffnn_newton.hpp  ffnn_rsprop.hpp  ffnnbuilder.hpp  inetwork.hpp  layer.hpp  softmax.hpp
include/nlp/: nlpprocessor.hpp
include/preprocessor/: preprocessing.hpp
include/rnn/: lstm.hpp
src/: CMakeLists.txt  activations.cpp  cell.cpp  cnn.cpp  convolution.cpp  crossentropylayer.cpp  csvreader.cpp  custom_exceptions.cpp  ffnn.cpp  ffnn_newton.cpp  ffnn_rsprop.cpp  ffnnbuilder.cpp  idal.cpp  layer.cpp  loss.cpp  lstm.cpp  pooling.cpp  preprocessing.cpp  softmax.cpp  utils.cpp
tests/: CMakeLists.txt  test_convolute.cpp  test_ffnn.cpp  test_ffnn_newtonraphson.cpp  test_ffnn_rsprop.cpp  test_frame.cpp  test_opencv.cpp  test_postreg.cpp  test_queue.cpp  test_series.cpp  test_softmax.cpp  visitor_test.cpp  xor.hpp
tests/frames/: test_frame.cpp
tests/series/: test_series.cpp
